fix alignment on page

--- a/blocks/v2-navigation-hub/v2-navigation-hub.css
+++ b/blocks/v2-navigation-hub/v2-navigation-hub.css
@@ -1,6 +1,5 @@
 .v2-navigation-hub-container {
   --section-padding-top: 0;
-  --section-padding-bottom: 0;
 }
 
 .v2-navigation-hub-wrapper {
